Initial test for accumulo 2